# goat-robotics

./: Butler_robot_Documentation.docx  LICENSE  README.md
install/: local_setup.sh  setup.sh
install/turtlebot3_custom/share/turtlebot3_custom/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/turtlebot3_custom/share/turtlebot3_custom/cmake/: turtlebot3_customConfig.cmake
install/turtlebot3_custom/share/turtlebot3_custom/launch/: custom_world_launch.py
install/turtlebot3_custom/share/turtlebot3_custom/src/: my_custommap.yaml
log/: latest_build
turtlebot3_custom/: CMakeLists.txt
turtlebot3_custom/launch/: nav2_custom.launch.py
turtlebot3_custom/src/: butler_robot.py  my_custommap.pgm
turtlebot3_custom/worlds/: custom.world
